# DevFS

./: .gitignore
Client/Client/: CMakeLists.txt  main.cpp
Client/Client/include/: client.hxx  fileio.hxx  host.hxx
Client/Client/source/: client.cxx  fileio.cxx  host.cxx
Server/DevFS_server/: CMakeLists.txt  main.cpp
Server/DevFS_server/include/: host.hxx  server.hxx
Server/DevFS_server/source/: host.cxx  server.cxx
