project(DevFS_server)
cmake_minimum_required(VERSION 2.8)
aux_source_directory(./source SRC_LIST_SOURCE)
add_definitions(-DDLIB_NO_GUI_SUPPORT)
aux_source_directory(. SRC_LIST_HOME)
file(GLOB SRC_LIST_INC "include/*.hxx")
find_package(Threads REQUIRED)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pthread -std=c++11")
add_executable(${PROJECT_NAME} lib/dlib/all/source.cpp ${SRC_LIST_HOME} ${SRC_LIST_INC} ${SRC_LIST_SOURCE})
target_link_libraries(${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})
